@@ -1112,6 +1112,14 @@ Details    : Directly associate cached pages to lock that protect those pages,
              this allows us to quickly find what pages to write and remove
 	     once lock callback is received.
 
+Severity   : normal
+Bugzilla   : 15953
+Description: more ldlm soft lockups
+Details    : In ldlm_resource_add_lock(), call to ldlm_resource_dump()
+             starve other threads from the resource lock for a long time in
+             case of long waiting queue, so change the debug level from
+             D_OTHER to the less frequently used D_INFO.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
